2000-06-24  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/color.c: if is_log_z, then print the non-logged values of z_min
	and z_max around the color box

	* src/unset.c: 'unset pm3d' sets the y axis to noreversed if the reversed
	has been set by 'set pm3d map'

2000-06-23  Johannes Zellner <johannes@zellner.org>

	* src/gplt_x11.c: repaired `selection' (by left mouse).
	I really don't know when and how this got broken!

2000-06-15  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* term/cgm.trm(CGM_option): reject linewidth zero to avoid
	infinite looping in CGM_dashed_vector(), later

2000-06-14  Johannes Zellner <johannes@zellner.org>

	* epslatex.trm also for pm3d

2000-06-14  Johannes Zellner <johannes@zellner.org>

	* src/color.c: modified the postscript color box drawing for user borders
	* term/post.trm: repaired the broken pslatex if using `encoding'
	as proposed by Petr Mikulik.

2000-06-13  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/datafile.c(df_gets): prompt visibly for inline data, if
	in interactive mode.

	* src/set.c(reset_command): set grid linewidth to 1.0, like the
	startup value (was 0.5, incorrectly).

2000-06-10  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* GNUmakefile, Makefile.am: Move pre-dist target from Makefile.am.

	* configure.in: New --enable-epslatex option. Cleanups.

	* src/term.h: Add epslatex support.

	* term/ggi.trm: New GGI driver, contributed by Cesar Crusius
	<crusius@leland.stanford.edu>. Support not complete yet.
	Requires -lgii, -lggi and -lggiwmh for linking.

	* term/epslatex.trm: New terminal driver by Gregor Thalhammer
	<Gregor.Thalhammer@uibk.ac.at>, updated version from 7th June.

2000-06-09  Johannes Zellner <johannes@zellner.org>

	* src/save.c: don't close the fp's if it's stdout

2000-06-09  Johannes Zellner <johannes@zellner.org>

	* implemented the palette `origin', `size', `border',
	`noborder', `bdefault' subcommands and did a few changes