@@ -6,6 +6,11 @@
 	* src/unset.c: 'unset pm3d' sets the y axis to noreversed if the reversed
 	has been set by 'set pm3d map'
 
+	* pm3d: a trick for rotating the ylabel via 'set pm3d map' (see variable
+	`pm3d_map_rotate_ylabel`). That's needed because gnuplot does not have an
+	option for rotating x,y,z axes labels; once it possesses it, the above 
+	mentioned variable would be replaced by the new one.
+
 2000-06-23  Johannes Zellner <johannes@zellner.org>
 
 	* src/gplt_x11.c: repaired `selection' (by left mouse).
